added bootstrap link and diu-qualification box shadow

--- a/index.html
+++ b/index.html
@@ -59,13 +59,29 @@
 </section>
 
 <section class="container mt-5">
-  <h3>Why Choose DIU?</h3>
-  <div class="row">
-    <div class="col-md-4"><h5>🎓 Quality Education</h5><p>Programs designed with international standards.</p></div>
-    <div class="col-md-4"><h5>💻 Modern Campus</h5><p>Smart classrooms, labs, and online portals.</p></div>
-    <div class="col-md-4"><h5>🌍 Global Recognition</h5><p>Ranked globally by QS and Times Higher Education.</p></div>
+  <h3 class="mb-4">Why Choose DIU?</h3>
+  <div class="row g-4">
+    <div class="col-md-4">
+      <div class="feature-box">
+        <h5>🎓 Quality Education</h5>
+        <p>Programs designed with international standards.</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="feature-box">
+        <h5>💻 Modern Campus</h5>
+        <p>Smart classrooms, labs, and online portals.</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="feature-box">
+        <h5>🌍 Global Recognition</h5>
+        <p>Ranked globally by QS and Times Higher Education.</p>
+      </div>
+    </div>
   </div>
 </section>
+
 
 <section class="bg-primary text-white text-center p-4 mt-5">
   <h4>Ready to join DIU?</h4>
